--- a/module4/mod4-exercise2.html
+++ b/module4/mod4-exercise2.html
@@ -17,8 +17,18 @@
     <button onclick="document.getElementById('gameMode').className='easy-mode'">Easy</button>
     <button onclick="document.getElementById('gameMode').className='hard-mode'">Hard</button>
     
-    <!-- Exercise 2: Changing  -->
-    
+    <!-- Exercise 2: Changing text color on clicked link -->
+    <ul>
+        <li onclick="this.style.color='red'">Item 1</li>
+        <li onclick="this.style.color='blue'">Item 2</li>
+        <li onclick="this.style.color='green'">Item 3</li>
+        <li onclick="this.style.color='purple'">Item 4</li>
+        <li onclick="this.style.color='orange'">Item 5</li>
+    </ul>
+    <p id="paragraph">Click the button to change my color.</p>
+    <button onclick="document.getElementById('paragraph').style.color='purple'">
+        Change Paragraph Color
+    </button>
     <!-- Script  -->
     <script src="mod4-exercise2.js"></script>
 </body>
