add Exercise 4 for FAQ sextion with transition

--- a/module4/mod4-exercise2.html
+++ b/module4/mod4-exercise2.html
@@ -29,6 +29,42 @@
     <button onclick="document.getElementById('paragraph').style.color='purple'">
         Change Paragraph Color
     </button>
+
+    <!-- Exercise 3:  Show/Hide a paragraph-->
+    <hr>
+    <p id="paragraph2">This is a paragraph that can be shown or hidden.</p>
+    <button onclick="document.getElementById('paragraph2').style.display='block'">Show</button>
+    <button onclick="document.getElementById('paragraph2').style.display='none'">Hide</button>
+    <hr>
+
+    <!-- Exercise 4:  Integrating CSS Transitions -->
+    <div class="faq">
+        <div class="faq-item">
+          <div class="faq-question" onclick="this.nextElementSibling.style.maxHeight = this.nextElementSibling.scrollHeight + 'px'">
+            What is your return policy?
+          </div>
+          <div class="faq-answer">
+            <p>Our return policy is 30 days. No questions asked!</p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question" onclick="this.nextElementSibling.style.maxHeight = this.nextElementSibling.scrollHeight + 'px'">
+            How do I track my order?
+          </div>
+          <div class="faq-answer">
+            <p>You can track your order using the tracking number provided in your confirmation email.</p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question" onclick="this.nextElementSibling.style.maxHeight = this.nextElementSibling.scrollHeight + 'px'">
+            Do you ship internationally?
+          </div>
+          <div class="faq-answer">
+            <p>Yes, we ship to over 100 countries worldwide. Shipping fees apply.</p>
+          </div>
+        </div>
+    </div>
+</body>
     <!-- Script  -->
     <script src="mod4-exercise2.js"></script>
 </body>
