add exercise for slide using CSS transition

--- a/module4/mod4-exercise2.html
+++ b/module4/mod4-exercise2.html
@@ -64,6 +64,13 @@
           </div>
         </div>
     </div>
+    <hr>
+    
+    <!-- Exercise 5: Animated slide transition -->
+    <div id="slide" class="slide">Slide 1</div>
+    <button onclick="document.getElementById('slide').classList.add('slide-out')">Next Slide</button>
+    
+
 </body>
     <!-- Script  -->
     <script src="mod4-exercise2.js"></script>
