add module 7 exercise 3

--- a/module7/mod7-exercise1.html
+++ b/module7/mod7-exercise1.html
@@ -22,11 +22,18 @@
         <div class="result" id="result"></div>
     </div>
     <hr>
-    <!-- Exercise 2: -->
+    <!-- Exercise 2: Function with default parameters -->
     <div class="greeting">
         <input type="text" id="name" placeholder="Enter your name">
         <button onclick="displayGreeting()">Greet</button>
         <div class="result" id="result2"></div>
+    </div>
+    <hr>
+
+    <!-- Exercise 3: -->
+    <div class="counter">
+        <button onclick="incrementCounter()">Increment Counter</button>
+        <div class="count" id="count">Counter: 0</div>
     </div>
     <script src="mod7-exercise1.js"></script>
 </body>
