module 8 exercise 2: adding item to grocery list

--- a/module8/mod8-exercise1.html
+++ b/module8/mod8-exercise1.html
@@ -17,6 +17,16 @@
     <hr>
 
     <!-- Exercise 2: Add list item -->
+    <div class="grocery-container">
+        <h1>Grocery List</h1>
+        <div class="input-container">
+            <input type="text" id="groceryItem" placeholder="Enter grocery item">
+            <button id="addItemButton">Add Item</button>
+        </div>
+        <ul id="groceryList"></ul>
+        <p id="emptyMessage">You have not added any item yet</p>
+    </div>
+    
     <script src="mod8-exercise1.js"></script>
 </body>
 </html>
