module 8 exercise 3 form validation

--- a/module8/mod8-exercise1.html
+++ b/module8/mod8-exercise1.html
@@ -26,7 +26,17 @@
         <ul id="groceryList"></ul>
         <p id="emptyMessage">You have not added any item yet</p>
     </div>
+    <hr>
     
+    <!-- Exercise 3: Form Validation -->
+    <div class="form-container">
+        <h1>Form Validation</h1>
+        <form id="validationForm">
+            <input type="text" id="inputField" placeholder="Enter something">
+            <button type="button" id="validateButton">Validate</button>
+        </form>
+    </div>
+
     <script src="mod8-exercise1.js"></script>
 </body>
 </html>
