mod8 exercise 4 Interactive table

--- a/module8/mod8-exercise1.html
+++ b/module8/mod8-exercise1.html
@@ -27,7 +27,7 @@
         <p id="emptyMessage">You have not added any item yet</p>
     </div>
     <hr>
-    
+
     <!-- Exercise 3: Form Validation -->
     <div class="form-container">
         <h1>Form Validation</h1>
@@ -36,7 +36,30 @@
             <button type="button" id="validateButton">Validate</button>
         </form>
     </div>
+    <hr>
 
+    <!-- Exercise 4: Interactive Table -->
+    <div class="table-container">
+        <h1>Interactive Table</h1>
+        <form id="tableForm">
+            <input type="text" id="inputName" placeholder="Enter name">
+            <input type="text" id="inputAge" placeholder="Enter age">
+            <button type="button" id="addRowButton">Add Row</button>
+        </form>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+                <!-- New rows will be added here -->
+            </tbody>
+        </table>
+    </div>
+    <hr>
+    
     <script src="mod8-exercise1.js"></script>
 </body>
 </html>
