module 8 exercise 6 image carousel

--- a/module8/mod8-exercise1.html
+++ b/module8/mod8-exercise1.html
@@ -59,7 +59,14 @@
         </table>
     </div>
     <hr>
-    
+
+    <!-- Exercise 5: Image Carousel -->
+    <div class="carousel-container">
+        <h1>Image Carousel</h1>
+        <img id="carouselImage" src="imagePlaceholder1.webp" alt="Carousel Image">
+    </div>
+
+
     <script src="mod8-exercise1.js"></script>
 </body>
 </html>
