--- a/module9/index.html
+++ b/module9/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+    <div class="container">
+        <h2>My To Do List</h2>
+        <!-- Input field for new tasks -->
+        <input type="text" id="new-task-input" placeholder="Enter a new task">
+        <!-- Button to add new task -->
+        <button id="add-task-button">Add Task</button>
+        <!-- Container for the task list -->
+        <div id="task-list"></div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
